# Swallow-Pipeline

./: .gitignore  README.md  pyproject.toml
evaluation/evalplus/: README.md
evaluation/lm-eval-harness/: README.md
pipelines/: README.md
pipelines/swallow_code/accepted/: qa.py  qa.sh  translate.py  translate.sh
pipelines/swallow_code/rejected/: change_qa_style.py  change_qa_style.sh
pipelines/swallow_cosmopedia/: automath.py  automath.sh  cosmopedia.py  cosmopedia.sh
pipelines/swallow_math/scripts/: stage1.sh  stage1_length_filter.sh  stage2_math_text_extract.sh  stage3_filter.sh  stage4_qa.sh  stage4_textbook.sh
pipelines/swallow_math/src/: content_length_filter.py  filter.py  prompts.py  run.py
pipelines/swallow_wikipedia/: qa.py  qa.sh
tasks/swallow-code-v1/: text_length.sh
tools/converter/: arrow_to_jsonl.py  arrow_to_jsonl.sh  parquet_to_jsonl.py  parquet_to_jsonl.sh
tools/hf/: hf_repo_cleaner.py
tools/public_datasets/acereason_1.1_sft/: run.py
tools/public_datasets/gpt-oss/: add_text.py  convert.sh  convert_gpt_oss_style.py  delete_tag.py
tools/public_datasets/nemotron-cc/: nemotron-cc-hq-actual.sh
tools/public_datasets/nemotron-post-training-v1/: chat.py
tools/public_datasets/nemotron-post-training-v2/: multilingual.py  multilingual.sh
tools/public_datasets/nemotron-pretraining-code-v1/: split.sh  split_by_language.py
tools/public_datasets/open_code_reasoning_2/: README.md  build.py  run.py  run.sh
tools/public_datasets/open_math_reasoning/: download.sh  run.py
tools/public_datasets/open_science_reasoning_2/: run.py
(+47 files in other folders)
